Improve header on mobile, fix spacing/colour on desktop header.

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -11,3 +11,11 @@
 #main-outlet {
 	padding-top: 166px;
 }
+
+.title-wrapper {
+	padding-left: 16px;
+}
+
+.topic-link {
+	color: #fff;
+}
